residue pair priority